--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HERE WE GOOOO....</title>
+  <link rel='stylesheet' href='styles.css' />
 </head>
 <body>
   <h1>No way!! You did it, dude!</h1>
