--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,14 @@
   <link rel='stylesheet' href='styles.css' />
 </head>
 <body>
-  <h1>No way!! You did it, dude!</h1>
+  <header>
+    <h1>You found the Main Page!</h1>
+  </header>
+  <section id="hero">
+
+  </section>
+  <section id="content">
+
+  </section>
 </body>
 </html>
