--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HERE WE GOOOO....</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Bungee+Outline&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='styles.css' />
 </head>
 <body>
@@ -12,10 +15,13 @@
     <h1>You found the Main Page!</h1>
   </header>
   <section id="hero">
-
+    <h2> Maybe it will work</h2>
   </section>
   <section id="content">
-
+      <aside>
+        <h3>This is that good good...</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus voluptate minima et iste numquam laudantium id, commodi dolore nesciunt, odio qui ullam perferendis esse illum. Quae corporis, animi minima reiciendis vero minus amet? Asperiores quibusdam maxime illum itaque quo molestiae.</p>
+      </aside>
   </section>
 </body>
 </html>
