--- a/client/index.html
+++ b/client/index.html
@@ -23,5 +23,6 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus voluptate minima et iste numquam laudantium id, commodi dolore nesciunt, odio qui ullam perferendis esse illum. Quae corporis, animi minima reiciendis vero minus amet? Asperiores quibusdam maxime illum itaque quo molestiae.</p>
       </aside>
   </section>
+  <script src="main.js"></script>
 </body>
 </html>
